--- a/portfolio/src/pages/projects/projects.css
+++ b/portfolio/src/pages/projects/projects.css
@@ -1,13 +1,33 @@
 .projects_area {
     width: 100%;
-    background: lightgrey;
+    background: #e8eae9;
     display:flex;
     justify-content: space-around;
+    padding-top: 3%;
+    padding-bottom: 3%;
 }
 
 .project_card {
-    width: 340px;
-    height: 340px;
+    width: 390px;
+    height: 235px;
+    background: #0aa593;
+    position: relative;
     
+}
+
+
+
+.project_card_title {
+    width: 100%;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    background: black;
+    padding-top: 5px;
+    padding-left: 5px;
+    opacity: 0.5;
+    position: absolute;
+    top: 80%;
 }
 
