--- a/portfolio/src/pages/home/home.css
+++ b/portfolio/src/pages/home/home.css
@@ -1,66 +1,72 @@
 .home_mainblock {
     width: 100%;
+    height: 100%;
     background: #0aa593;
     padding-top: 15%;
     padding-bottom: 15%;
   }
   
-  .wordbox {
-    display: flex;
-    margin: 0 auto;
-    width: 22%;
-    border: 5px solid white;
-    overflow: hidden;
-  }
   
-  .wordbox span {
+  
+.word-animation {
     color: white;
-    font-size: 154px;
+    font-size: 0px;
     font-weight: bold;
+    color: transparent;
     text-transform: lowercase;
-    padding-right: 50px;
-    animation: slide 18s linear infinite;
-  }
-
-  .wordbox span:nth-child(1) {
-    animation-delay: 0s;
-  }
-
-  .wordbox span:nth-child(1) {
-    animation-delay: 3s;
-  }
-
-  .wordbox span:nth-child(2) {
-    animation-delay: 6s;
-  }
-
-  .wordbox span:nth-child(3) {
-    animation-delay: 9s;
-  }
-
-  .wordbox span:nth-child(4) {
-    animation-delay: 12s;
-  }
-
-  .wordbox span:nth-child(5) {
-    animation-delay: 15s;
-  }
-
-  .wordbox span:nth-child(6) {
-    animation-delay: 18s;
-  }
-
-  @keyframes slide {
-    0% {
-      transform: translateX(0%);
-    }
     
-    100% {
-        transform: translateX(-100%);
-    }
+    
   }
 
-  
-  
+  .word-animation span {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    font-size: clamp(20px, 8vw, 75px);
+    padding-left: 25px;
+    padding-right: 25px;
+}
 
-  
+.word-animation span::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+}
+.word-animation:nth-child(1) {
+  font-weight: 300;
+  animation: txt-appearance 0s 1s forwards;
+}
+.word-animation:nth-child(2) {
+  animation: txt-appearance 0s 1.25s forwards;
+}
+.word-animation:nth-child(1) span::after {
+  background: white;
+  animation: slide-in 0.75s ease-out forwards,
+  slide-out 0.75s 1s ease-out forwards;
+}
+.word-animation:nth-child(2) span::after {
+  background: #707070;
+  animation: slide-in 0.75s 0.3s ease-out forwards,
+  slide-out 0.75s 1.3s ease-out forwards;
+}
+
+@keyframes slide-in {
+  100% {
+      transform: translateX(0%);
+  }
+}
+@keyframes slide-out {
+  100% {
+      transform: translateX(100%)
+  }
+}
+@keyframes txt-appearance {
+  100% {
+      color: white;
+  }
+}
