--- a/portfolio/src/pages/home/home.css
+++ b/portfolio/src/pages/home/home.css
@@ -1,12 +1,13 @@
+/* BLOC PRINCIPAL */
+
 .home_mainblock {
     width: 100%;
-    height: 100%;
     background: #0aa593;
     padding-top: 15%;
     padding-bottom: 15%;
   }
   
-
+/* TEXTE ANIME */
   
 .word-animation {
     color: white;
@@ -26,6 +27,8 @@
     padding-left: 25px;
     
 }
+
+/* ANIMATION */
 
 .word-animation span::after {
   content: "";
@@ -70,3 +73,4 @@
       color: white;
   }
 }
+
