--- a/portfolio/src/pages/projects/projects.css
+++ b/portfolio/src/pages/projects/projects.css
@@ -1,8 +1,15 @@
 .projects_area {
     width: 100%;
     background: #e8eae9;
-    display:flex;
-    justify-content: space-around;
+    
+}
+
+.projects_container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     padding-top: 3%;
     padding-bottom: 3%;
 }
@@ -11,11 +18,17 @@
     width: 390px;
     height: 235px;
     background: #0aa593;
+    overflow: hidden;
     position: relative;
+    margin-right: 20px;
+    margin-bottom: 20px;
     
 }
 
-
+.project_card img {
+    width: 50%;
+    object-fit: cover;
+}
 
 .project_card_title {
     width: 100%;
@@ -24,7 +37,7 @@
     font-size: 20px;
     font-weight: 900;
     padding-top: 5px;
-    padding-left: 5px;
+    padding-left: 10px;
     position: absolute;
     top: 75%;
 }
