project page & stuff

--- a/portfolio/src/components/carousel/carousel.css
+++ b/portfolio/src/components/carousel/carousel.css
@@ -1,10 +1,29 @@
+.carousel_container {
+    display: flex;
+}
 
+.slider {
+    position: relative;
+    opacity: 0.8;
+    
+}
 
+.slider img {
+    width: 100%;
+    
+}
 
 .vectorPrev {
     width: 50px;
+    transform: rotate(180deg);
+    position: absolute;
+    top: 40%;
+    left: 2%;
 }
 
 .vectorNext {
     width: 50px;
+    position: absolute;
+    top: 40%;
+    left: 90%;
 }
