--- a/portfolio/src/pages/about/about.css
+++ b/portfolio/src/pages/about/about.css
@@ -105,7 +105,7 @@
 
 .about_text {
     
-    color: #707070;
+    color: #464747;
     font-style: italic;
     width: 70%;
     transform: scaleY(0);
@@ -169,3 +169,96 @@
         transform: scaleY(1);
     }
 }
+
+/*
+------------------
+    RESPONSIVE
+------------------
+*/
+
+/* Tablettes */
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .about_container {
+        flex-direction: column;
+    }
+
+    .about_image {
+        width: 100%;
+        max-height: 300px;
+        height: 100%;
+        background: #0AA593;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        
+    }
+
+    .social_icons {
+        display: none;
+    }
+
+    .about_info {
+        width: 100%;
+        max-height: 550px;
+    }
+
+    .about_content {
+        width: 90%;
+    }
+
+    .about_title {
+        padding-top: 4%;
+        padding-left: 20px;
+    }
+
+}
+
+/* Mobiles */
+
+@media screen and (min-width: 360px) and (max-width: 767px) {
+
+    .about_container {
+        flex-direction: column;
+    }
+
+    .about_image {
+        width: 100%;
+        max-height: 250px;
+        height: 100%;
+        background: #0AA593;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        
+    }
+
+    .social_column {
+        display: none;
+    }
+
+    .about_info {
+        width: 100%;
+        max-height: 550px;
+    }
+
+    .about_content {
+        width: 90%;
+    }
+
+    .about_title {
+        font-size: 50px;
+        padding-top: 4%;
+        padding-left: 20px;
+        padding-bottom: 0;
+    }
+
+    .about_text {
+        font-size: 14px;
+    }
+
+}
+
