--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -61,22 +61,32 @@ nav a {
 
 @media screen and (min-width: 360px) and (max-width: 767px) {
 
-    .header_title {
-        width: 40%;
-    }
-    
-    .header_title img {
-        max-width: 150px;
-    }
-
-    nav {
-        width: 60%;
+    header {
+        flex-direction: column;
         
     }
 
+    .header_title {
+        width: 100%;
+    }
+
+    .header_title img {
+        margin: 0 auto;
+        max-width: 200px;
+    }
+
+    nav {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        background: #0AA593;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
     nav a {
-        font-size: 12px;
-        text-transform: uppercase;
+        font-size: 18px;
+        color: white;
     }
 
 }
