--- a/portfolio/src/pages/about/about.css
+++ b/portfolio/src/pages/about/about.css
@@ -242,7 +242,7 @@
 
     .about_info {
         width: 100%;
-        max-height: 550px;
+        max-height: 600px;
     }
 
     .about_content {
@@ -257,6 +257,7 @@
     }
 
     .about_text {
+        width: 85%;
         font-size: 14px;
     }
 
