--- a/portfolio/src/pages/contact/contact.css
+++ b/portfolio/src/pages/contact/contact.css
@@ -77,6 +77,15 @@
     
 }
 
+.message-submit button:hover {
+    background: #707070;
+}
+
+.message-submit button:active {
+    background: white;
+    color: #0AA593;
+}
+
 /*
 ------------------
     RESPONSIVE
