--- a/portfolio/src/components/carousel/carousel.css
+++ b/portfolio/src/components/carousel/carousel.css
@@ -1,21 +1,23 @@
 .carousel_container {
     display: flex;
+    width: 90%;
 }
 
 .slider {
     position: relative;
-    opacity: 0.8;
+    
     
 }
 
 .slider img {
     width: 100%;
+    height: 900px;
+    object-fit: cover;
     
 }
 
 .vectorPrev {
     width: 50px;
-    transform: rotate(180deg);
     position: absolute;
     top: 40%;
     left: 2%;
@@ -26,4 +28,21 @@
     position: absolute;
     top: 40%;
     left: 90%;
+}
+
+.fa-arrow-left, .fa-arrow-right {
+    font-size: 80px;
+    color: #707070;
+    
+}
+
+.image-number {
+    background: #0AA593;
+    width: 70px;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    position: absolute;
+    left: 45%;
+    top: 95%;
 }
