--- a/portfolio/src/pages/home/home.css
+++ b/portfolio/src/pages/home/home.css
@@ -74,3 +74,15 @@
   }
 }
 
+@media screen and (min-width: 360px) and (max-width: 767px) {
+
+    .home_mainblock {
+      background: #707070;
+    }
+
+    .word-animation:nth-child(2) span::after {
+
+      background: #0aa593;
+
+    }
+}
