--- a/portfolio/src/pages/project/project.css
+++ b/portfolio/src/pages/project/project.css
@@ -2,10 +2,14 @@
     width: 100%;
     display: flex;
     background: #e8eae9;
+    animation: pageblock-open 0.3s ease-out forwards;
 }
 
 .carousel_area {
     width: 50%;
+    transform: scaleX(0);
+    animation: carousel 0.4s ease-in-out forwards;
+    animation-delay: 0.3s;
 }
 
 .projectcontents_area {
@@ -17,6 +21,15 @@
     font-weight: bold;
     color: #707070;
     padding-top: 250px;
+    animation: title 0.2s ease-out forwards;
+    animation-delay: 0.7s;
+    opacity: 0;
+}
+
+.tags_types {
+    animation: tags-and-types 0.2s ease-out forwards;
+    animation-delay: 0.9s;
+    opacity: 0;
 }
 
 .projectcontents_area ul {
@@ -46,7 +59,11 @@
 
 .projet_description {
     color: #707070;
-    font-weight: light;
+    width: 60%;
+    animation: description-unfold 0.2s ease-out forwards;
+    animation-delay: 1.1s;
+    transform: scaleY(0);
+    
 }
 
 .projectcontents_area a {
@@ -57,6 +74,9 @@
     display: flex;
     justify-content: space-between;
     width: 40%;
+    animation: poplinks 0.2s ease-out forwards;
+    animation-delay: 1.3s;
+    opacity: 0;
     
 }
 
@@ -108,3 +128,73 @@
     font-weight: 700;
 }
 
+@keyframes carousel {
+
+    0% {
+        transform: scaleX(0);
+    }
+
+    100% {
+        transform: scaleX(1);
+    }
+}
+
+   @keyframes pageblock-open {
+
+    0% {
+        transform: scaleX(0);
+    }
+
+    100% {
+        transform: scaleX(1);
+    }
+
+   }
+
+   @keyframes title {
+
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+   }
+
+   @keyframes tags-and-types {
+
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+   }
+
+   @keyframes description-unfold {
+
+    0% {
+        transform: scaleY(0);
+    }
+
+    100% {
+        transform: scaleY(1);
+    }
+
+   }
+
+   @keyframes poplinks {
+
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+   }
