--- a/portfolio/src/pages/project/project.css
+++ b/portfolio/src/pages/project/project.css
@@ -59,6 +59,12 @@
     
 }
 
+.project_status {
+    text-transform: uppercase;
+    color: #707070;
+    margin-left: 10px;
+}
+
 .projet_description {
     color: #707070;
     width: 60%;
@@ -140,14 +146,16 @@
 }
 
 .backtoprojects a {
-    color: #707070;
+    /*color: #707070;
     font-weight: 700;
-    text-transform: uppercase;
+    text-transform: uppercase;*/
+    display: none;
 }
 
 .fa-circle-arrow-left {
-    color: #707070;
-    padding-right: 3px;
+    /*color: #707070;
+    padding-right: 3px;*/
+    display: none;
 }
 
 /* Animations */
@@ -278,6 +286,10 @@
         text-align: center;
     }
 
+    .project_status {
+        margin-top: 10px;
+    }
+
     .projet_description {
         width: 70%;
         text-align: center;
@@ -328,6 +340,10 @@
 
     .project_type {
         text-align: center;
+    }
+
+    .project_status {
+        margin-top: 10px;
     }
 
     .projet_description {
